[tool.poetry]
name = "pyprofile"
version = "0.1.0"
description = ""
authors = ["JCPedroza <nemesis4go10@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^4.0.1"
prospector = "^1.7.7"
pyclean = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
